--- a/packages/airflow-backend/airflow-backend-lib/src/main/resources/application.yml
+++ b/packages/airflow-backend/airflow-backend-lib/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   application:
     name: dna-airflow-backend
     version: 3.2.4
+  profile:
+    active: production
   flyway:
     enabled: ${FLYWAY_ENABLED:true}
     baseline-on-migrate: ${FLYWAY_BASELINE_ON_MIGRATE:true}
