--- a/deployment/kubernetes/helm/charts/trino/templates/configmap-catalog.yaml
+++ b/deployment/kubernetes/helm/charts/trino/templates/configmap-catalog.yaml
@@ -21,7 +21,7 @@ data:
     hive.s3.aws-secret-key={{ .Values.hivemetastore.minio.secretKey }}
     hive.s3.ssl.enabled=false
     delta.register-table-procedure.enabled=true
-    delta.legacy-create-table-with-existing-location.enabled=true
+    #delta.legacy-create-table-with-existing-location.enabled=true
   iceberg.properties: |
     connector.name=iceberg
     iceberg.catalog.type=hive_metastore
