--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
@@ -647,9 +647,12 @@ definitions:
   AdditionalPropertiesVO:
     type: object
     properties: 
+      name:
+        type: string
+        description: "name of services"
       image:
         type: string
-        description: "image"
+        description: "image of container"
       args:
         type: array
         items:
