added git ignore

--- a/packages/authenticator-service/.gitignore
+++ b/packages/authenticator-service/.gitignore
@@ -6,4 +6,7 @@ build
 # Ignore compiled classes bin directory
 bin
 
+#Ignore Application-Dev.yml
+/authenticator-lib/src/main/resources/application-dev.yml
+
 gradle-wrapper.jar
