--- a/packages/chronos/.gitignore
+++ b/packages/chronos/.gitignore
@@ -7,4 +7,7 @@ build
 # Ignore compiled classes bin directory
 bin
 
+#Ignore Application-Dev.yml
+/chronos-lib/src/main/resources/application-dev.yml
+
 gradle-wrapper.jar
