--- a/packages/airflow-backend/.gitignore
+++ b/packages/airflow-backend/.gitignore
@@ -1,5 +1,8 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+#Ignore Application-Dev.yml
+/airflow-backend-lib/src/main/resources/application-dev.yml
+
 # Ignore Gradle build output directory
 build
