--- a/packages/fabric-backend/.gitignore
+++ b/packages/fabric-backend/.gitignore
@@ -3,3 +3,6 @@
 
 # Ignore Gradle build output directory
 build
+
+#Ignore Application-Dev.yml
+/fabric-backend/lib/src/main/resources/application-dev.yml
