--- a/packages/matomo-backend/.gitignore
+++ b/packages/matomo-backend/.gitignore
@@ -7,4 +7,7 @@ build
 # Ignore compiled classes bin directory
 bin
 
+#Ignore Application-Dev.yml
+/matomo-lib/src/main/resources/application-dev.yml
+
 gradle-wrapper.jar
