--- a/packages/model-registry/.gitignore
+++ b/packages/model-registry/.gitignore
@@ -7,4 +7,7 @@ build
 # Ignore compiled classes bin directory
 bin
 
+#Ignore Application-Dev.yml
+/model-registry-lib/src/main/resources/application-dev.yml
+
 gradle-wrapper.jar
