--- a/packages/trino-backend/.gitignore
+++ b/packages/trino-backend/.gitignore
@@ -7,4 +7,7 @@ build
 # Ignore compiled classes bin directory
 bin
 
+#Ignore Application-Dev.yml
+/trino-backend-lib/src/main/resources/application-dev.yml
+
 gradle-wrapper.jar
