--- a/packages/fabric-backend/lib/src/main/resources/application.yml
+++ b/packages/fabric-backend/lib/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
   application:
     name: dna-fabric-workspace-service
     version: 1.1.0
-
+  profiles:
+    active: production
   flyway:
     enabled: ${FLYWAY_ENABLED:false}
     baseline-on-migrate: ${FLYWAY_BASELINE_ON_MIGRATE:false}
@@ -47,11 +48,17 @@ fabricWorkspaces:
   group:
     identifier:  ${FABRIC_ONBOARD_GROUP_IDENTIFIER:xxxxx}
     displayName:  ${FABRIC_ONBOARD_GROUP_DISPLAYNAME:xxxxx}
+    login: ${GROUPSEARCH_LOGIN:xxxxxx}
+    clientId: ${GROUPSEARCH_CLIENTID:xxxxxx}
+    clientSecret: ${GROUPSEARCH_CLIENTSECRET:xxxxxx}
+    grantType: ${GROUPSEARCH_OAUTH_GRANT_TYPE:xxxxxx}
+    scope: ${GROUPSEARCH_OAUTH_SCOPE:https://graph.microsoft.com/.default}
   uri:
     login: ${FABRIC_LOGIN_URL:https://login.microsoftonline.com/{tenantId}/oauth2/v2.0/token}
     workspacesBase: ${FABRIC_WORKSPACE_URL:https://api.fabric.microsoft.com/v1/workspaces}
     capacitiesBase: ${FABRIC_CAPACITY_URL:https://api.fabric.microsoft.com/v1/capacities}
     addUserUrl: ${FABRIC_ADDUSER_URL:https://api.powerbi.com/v1.0/myorg/groups/{groupId}/users}
+    
 
 authoriser:
   ssoUri: ${IDENTITY_SSO_URI:XXXX}
