added genAi new tile

--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -107,7 +107,7 @@ MATOMO_API_BASEURL={PROJECTMO_MATOMO_API_BASEURL}
 MATOMO_APP_URL=${PROJECTMO_MATOMO_APP_URL}
 SPIRE_URL={PROJECTMO_SPIRE_URL}
 GENAI_DIRECT_CHAT_URL={PROJECTMO_GENAI_DIRECT_CHAT_URL}
-GENAI_LLM_PROMPT_ENG_URL= {PROJECTMO_GENAI_LLM_PROMPT_ENG_URL},
+GENAI_LLM_PROMPT_ENG_URL={PROJECTMO_GENAI_LLM_PROMPT_ENG_URL}
 CLAMAV_IMAGE_URL={PROJECTMO_CLAMAV_IMAGE_URL}
 CODESPACE_SECURITY_APP_ID={PROJECTMO_CODESPACE_SECURITY_APP_ID}
 FORMBRICKS_SURVEY_URL={PROJECTMO_FORMBRICKS_SURVEY_URL}
