--- a/packages/fabric-backend/lib/src/main/resources/api/fabricWorkspaces.yaml
+++ b/packages/fabric-backend/lib/src/main/resources/api/fabricWorkspaces.yaml
@@ -66,7 +66,54 @@ paths:
   #  supprorted http methods GET, POST and DELETE
   #
   # path example ../fabric-workspaces
-
+  /lov/fabric-workspaces:
+    get:
+      tags:
+        - "lovs"
+      summary: "List of values for available workspaces"
+      description: "Get all workspaces. This endpoints will be used to get all valid available fabric workspace records."
+      operationId: "getWorkspacesLov"
+      parameters:            
+        - name: offset
+          in: query
+          description: page number from which listing of workspaces should start. Offset. Example 2
+          required: false
+          type: integer
+        - name: limit
+          in: query
+          description: page size to limit the number of workspaces, Example 15
+          required: false
+          type: integer
+        - name: sortBy
+          in: query
+          description: Sort workspaces by a given variable like name, createdOn
+          required: false
+          type: string
+          enum: [name, createdOn]
+        - name: sortOrder
+          in: query
+          description: Sort solutions based on the given order, example asc,desc
+          required: false
+          type: string
+          enum: [asc,desc]
+      responses:
+        201:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/FabricWorkspacesCollectionVO"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
+          
   /fabric-workspaces:
     get:
       tags:
@@ -74,32 +121,7 @@ paths:
       summary: "Get all workspaces for the user."
       description: "Get all workspaces. This endpoints will be used to get all valid available fabric workspace records."
       operationId: "getAll"
-      parameters:
-#        - name: division
-#          in: query
-#          description: List of IDs of divisions and subdivisions under each division of workspaces. Example [{1,[2,3]},{2,[1]},{3,[4,5]}]
-#          required: false
-#          type: string
-#         - name: subDivision
-#           in: query
-#           description: List of IDs of subDivisions of solutions, seperated by comma. Example 1,2,3
-#           required: false
-#           type: string
-#        - name: capacityIds
-#          in: query
-#          description: Capacity-Id to filter available workspaces. capacityIds is comma seperated keywords which are used to filter and fetch workspaces belonging to given ids. Example "capacityId1, capacityId2"
-#          required: false
-#          type: string
-#        - name: departments
-#          in: query
-#          description: Capacity-Id to filter available workspaces. capacityIds is comma seperated keywords which are used to filter and fetch workspaces belonging to given ids. Example "department1, department2"
-#          required: false
-#          type: string
-#        - name: tags
-#          in: query
-#          description: tags to filter available workspaces. tags is comma seperated search keywords which are used to search Tags and ProductName of solutions. Example "workspaces, java"
-#          required: false
-#          type: string              
+      parameters:            
         - name: offset
           in: query
           description: page number from which listing of workspaces should start. Offset. Example 2
