--- a/packages/code-space-mfe/package.json
+++ b/packages/code-space-mfe/package.json
@@ -132,6 +132,7 @@
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.3",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "video.js": "^8.17.3"
   }
 }
