power platform details page changes

--- a/deployment/kubernetes/helm/charts/frontend/values.yaml
+++ b/deployment/kubernetes/helm/charts/frontend/values.yaml
@@ -121,6 +121,11 @@ configJs: |
       SPIRE_URL='YOUR_SPIRE_URL',
       GENAI_DIRECT_CHAT_URL = 'YOUR_GENAI_DIRECT_CHAT_URL'
 
+      POWER_PLATFORM_DEFAULT_ENVIRONMENT_URL: 'YOUR_POWER_PLATFORM_DEFAULT_ENVIRONMENT_URL',
+      POWER_PLATFORM_CITIZEN_DEVELOPER_ACCOUNT_URL: 'YOUR_POWER_PLATFORM_CITIZEN_DEVELOPER_ACCOUNT_URL',
+      POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL: 'YOUR_POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL',
+      POWER_PLATFORM_SUPPORT_EMAIL: 'YOUR_POWER_PLATFORM_SUPPORT_EMAIL',
+      POWER_PLATFORM_SOCIAL_INTRANET_URL: 'YOUR_POWER_PLATFORM_SOCIAL_INTRANET_URL',
     };
 
     window["STORAGE_INJECTED_ENVIRONMENT"]={
