--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -110,3 +110,8 @@ GENAI_DIRECT_CHAT_URL={PROJECTMO_GENAI_DIRECT_CHAT_URL}
 CLAMAV_IMAGE_URL={PROJECTMO_CLAMAV_IMAGE_URL}
 CODESPACE_SECURITY_APP_ID={PROJECTMO_CODESPACE_SECURITY_APP_ID}
 FORMBRICKS_SURVEY_URL={PROJECTMO_FORMBRICKS_SURVEY_URL}
+POWER_PLATFORM_DEFAULT_ENVIRONMENT_URL={PROJECTMO_POWER_PLATFORM_DEFAULT_ENVIRONMENT_URL}
+POWER_PLATFORM_CITIZEN_DEVELOPER_ACCOUNT_URL={PROJECTMO_POWER_PLATFORM_CITIZEN_DEVELOPER_ACCOUNT_URL}
+POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL={PROJECTMO_POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL}
+POWER_PLATFORM_SUPPORT_EMAIL={PROJECTMO_POWER_PLATFORM_SUPPORT_EMAIL}
+POWER_PLATFORM_SOCIAL_INTRANET_URL={PROJECTMO_POWER_PLATFORM_SOCIAL_INTRANET_URL}
