--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -109,6 +109,7 @@ MATOMO_MFE_APP_URL=http://localhost:8089
 MATOMO_APP_URL=YOUR_MATOMO_APP_URL
 DATALAKE_MFE_APP_URL=http://localhost:8090
 FABRIC_MFE_APP_URL=http://localhost:8091
+POWER_PLATFORM_MFE_APP_URL=http://localhost:8093
 
 
 ENABLE_SAP_ANALYTICS_CLOUD=false
@@ -162,6 +163,12 @@ POWER_BI_TOOL_URL=YOUR_POWER_BI_TOOL_URL
 SAC_TOOL_URL=YOUR_SAC_TOOL_URL
 TERMS_OF_USE_CONTENT=YOUR_TOU_CONTENT
 COMING_SOON_CONTENT=YOUR_COMING_SOON_CONTENT
+
+POWER_PLATFORM_DEFAULT_ENVIRONMENT_URL=YOUR_POWER_PLATFORM_DEFAULT_ENVIRONMENT_URL
+POWER_PLATFORM_CITIZEN_DEVELOPER_ACCOUNT_URL=YOUR_POWER_PLATFORM_CITIZEN_DEVELOPER_ACCOUNT_URL
+POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL=YOUR_POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL
+POWER_PLATFORM_SUPPORT_EMAIL=YOUR_POWER_PLATFORM_SUPPORT_EMAIL
+POWER_PLATFORM_SOCIAL_INTRANET_URL=YOUR_POWER_PLATFORM_SOCIAL_INTRANET_URL
 
 DATA_MODEL_URL=YOUR_DATA_MODEL_URL
 DATA_CATALOG_URL=YOUR_DATA_CATALOG_URL
