--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1275,6 +1275,8 @@ definitions:
         type: string
       gitRepoLoc:
         type: string
+      isDeployEnabled:
+        type: boolean
       required:
         -recipeId
         -recipeName
