--- a/deployment/kubernetes/helm/charts/backend/templates/policies/networkpolicies.yaml
+++ b/deployment/kubernetes/helm/charts/backend/templates/policies/networkpolicies.yaml
@@ -26,5 +26,11 @@ spec:
     - ports:
       - port: 64000
         protocol: TCP
+    - podSelector:
+          matchLabels:
+            app: dna-kong-gw-kong
+        namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: kong          
   policyTypes:
   - Ingress
