--- a/deployment/kubernetes/helm/charts/frontend/templates/policies/webaccess-networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/frontend/templates/policies/webaccess-networkpolicy.yaml
@@ -9,7 +9,13 @@ spec:
         - port: 3000
           protocol: TCP
         - port: 7171
-          protocol: TCP
+          protocol: TCP    
+    - podSelector:
+        matchLabels:
+          app.kubernetes.io/name: traefikv2
+      namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: ingress      
   podSelector:
     matchLabels:
       zone: web
