--- a/packages/code-space-mfe/package.json
+++ b/packages/code-space-mfe/package.json
@@ -117,7 +117,7 @@
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "7.35.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.2.0",
     "external-remotes-plugin": "^1.0.0",
