init changes commit

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1179,15 +1179,24 @@ definitions:
         type: string
       secureWithIAMRequired:
         type: boolean
-      technicalUserDetailsForIAMLogin:
-        type: string
-      valutInjectorEnable:  # Corrected property name
-        type: boolean
+      # technicalUserDetailsForIAMLogin:
+      #   type: string
+      # valutInjectorEnable:  # Corrected property name
+      #   type: boolean
         default: false  # This should now work as expected
       clientID:
         type: string
       clientSecret:
         type: string
+      redirectUri:
+        type: string
+      ignorePaths:
+        type: string
+      scope:
+        type: string
+      isApiRecipe:
+        type: boolean
+        required: true
 
 
            
